--- a/MiniMayhem/Packages/manifest.json
+++ b/MiniMayhem/Packages/manifest.json
@@ -5,7 +5,10 @@
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.5.1",
-    "com.unity.netcode.gameobjects": "1.2.0",
+    "com.unity.multiplayer.mlapi-patcher": "https://github.com/Unity-Technologies/multiplayer-community-contributions.git?path=/com.unity.multiplayer.mlapi-patcher#release-0.1.0",
+    "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
+    "com.unity.multiplayer.tools": "1.1.0",
+    "com.unity.netcode.gameobjects": "1.4.0",
     "com.unity.render-pipelines.universal": "14.0.6",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
